# instantink

./: .gitignore  Cargo.toml  Makefile  README.md  install.sh  uninstall.sh
src/: lib.rs  main.rs
